--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -163,7 +163,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #ffffff !important;
+			color: #363636 !important;
 		}
 
 		a:active {
